--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
     height: 100vh;
 }
 
+ul {
+    padding: 0;
+    margin: 0;
+}
+
 footer {
     margin-top: auto;
     text-align: center;
