--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .header {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 body {
@@ -12,6 +13,8 @@ body {
 ul {
     padding: 0;
     margin: 0;
+    display: flex;
+    gap: 25px;
 }
 
 li {
@@ -20,6 +23,7 @@ li {
 
 a {
     text-decoration: none;
+    /* color: white; */
 }
 
 footer {
