--- a/style.css
+++ b/style.css
@@ -36,7 +36,15 @@ button, .cta-box {
 
 .main-text {
     font-size: 48px;
-    font-weight: bolder;
+    font-weight: 800;
+}
+
+.info-title {
+    font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;
+
+
 }
 
 
