--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .header, .hero, .footer {
     color: #f9faf8;
     background-color: #1f2937;
@@ -12,10 +18,6 @@ button, .cta-box {
     background-color: #3882f6;
 }
 
-.hero {
-    padding: 75px 0;
-}
-
 .container {
     display: flex;
     flex-direction: column;
@@ -23,10 +25,16 @@ button, .cta-box {
     align-items: center;
 }
 
+
+
 .header {
     width: 100%;
     display: flex;
     justify-content: space-around;
+}
+
+.hero {
+    padding: 100px;
 }
 
 .logo {
@@ -44,12 +52,18 @@ button, .cta-box {
     width: 370px;
 }
 
+.placeholder {
+    background-color: grey;
+    padding: 100px;
+}
+
 .sign-up {
     color: white;
     border-radius: 5px;
     border: none;
     padding: 5px;
     width: 75px;
+    margin-top: 10px;
 }
 
 .main-text {
