--- a/style.css
+++ b/style.css
@@ -110,6 +110,29 @@ button, .cta-box {
     margin-bottom: 20px;
 }
 
+.quote {
+    background-color: #e5e7eb;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.quote-box {
+    width: 825px;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-weight: light;;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.quote-author {
+    display: flex;
+    justify-content: flex-end;
+    font-weight: 900;
+}
 
 
 body {
