--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     background-color: #1f2937;
 }
 
+.header, .footer {
+    padding: 20px;
+}
+
 .sub-text, .header a {
     font-size: 18px;
     color: #e5e7eb;
@@ -20,6 +24,8 @@ button, .cta-box {
 
 .wrapper {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -110,6 +116,10 @@ button, .cta-box {
     margin-bottom: 20px;
 }
 
+.cta {
+    padding: 100px;
+}
+
 .quote {
     background-color: #e5e7eb;
     padding: 100px;
@@ -134,6 +144,33 @@ button, .cta-box {
     font-weight: 900;
 }
 
+.cta-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px;
+}
+
+
+.cta-box {
+    width: 900px;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    color: white;
+}
+
+.cta-right {
+    padding-left: 50px;
+}
+
+
+.cta-right .sign-up {
+    border: 1px solid white;
+    margin-left: 50px;
+}
 
 body {
     margin: 0;
